# github-repository

./: full_ofdm.grc  full_ofdm.py  user_detect.grc
gr-howto-12-04-2014/grc/: howto_header_payload_demux.xml~  howto_ofdm_carrier_allocator_cvc.xml  howto_ofdm_chanest_vcvc.xml  howto_ofdm_cyclic_prefixer.xml~  howto_ofdm_serializer_vcc.xml  howto_ofdm_serializer_vcc.xml~  howto_sc_fdma_carrier_allocator_cvc.xml~  howto_sc_fdma_deinterleaver.xml~  howto_sc_fdma_frame_equalizer_vcvc.xml~  howto_sc_fdma_packet_headerparser_b.xml~  howto_square_ff.xml~  howto_subcarrier_monitor.xml~  howto_symbol_decision.xml~  howto_txt_sink.xml~  howto_user_device_core.xml  howto_user_device_debug.xml  howto_user_device_debug.xml~
gr-howto-12-04-2014/include/howto/: CMakeLists.txt  base_station_core.h  header_payload_demux.h~  metric_type.h~  ofdm_carrier_allocator_cvc.h  ofdm_chanest_vcvc.h  ofdm_chanest_vcvc.h~  ofdm_cyclic_prefixer.h  ofdm_cyclic_prefixer.h~  ofdm_equalizer_base.h  ofdm_equalizer_simpledfe.h  ofdm_frame_equalizer_vcvc.h  packet_header_ofdm.h~  sc_fdma_carrier_allocator_cvc.h  sc_fdma_equalizer_simpledfe.h~  sc_fdma_interleaver.h~  square_ff.h~  subcarrier_monitor.h~  txt_sink.h  user_device_debug.h
gr-howto-12-04-2014/lib/: CMakeLists.txt  CMakeLists.txt~  base_station_core_impl.cc  base_station_core_impl.h  chan_info_parser_impl.cc  chan_info_parser_impl.cc~  chan_info_parser_impl.h~  constellation.cc  header_payload_demux_impl.cc  header_payload_demux_impl.h~  ofdm_carrier_allocator_cvc_impl.cc  ofdm_carrier_allocator_cvc_impl.h~  ofdm_chanest_vcvc_impl.h  ofdm_chanest_vcvc_impl.h~  ofdm_chanest_vcvc_impl_impl.cc~  ofdm_cyclic_prefixer_impl.cc  ofdm_cyclic_prefixer_impl.h  ofdm_cyclic_prefixer_impl.h~  ofdm_equalizer_simpledfe.cc  ofdm_frame_equalizer_vcvc_impl.cc  ofdm_frame_equalizer_vcvc_impl.h  ofdm_frame_equalizer_vcvc_impl.h~  ofdm_outer_headerparser_bb_impl.h  ofdm_serializer_vcc_impl.cc  ofdm_serializer_vcc_impl.h  ofdm_serializer_vcc_impl.h~  packet_header_default.cc  packet_headerparser_b_impl.cc~  packet_headerparser_b_impl.h~  sc_fdma_carrier_allocator_cvc_impl.cc  sc_fdma_carrier_allocator_cvc_impl.h~  sc_fdma_equalizer_base.cc  sc_fdma_frame_equalizer_vcvc_impl.cc  sc_fdma_packet_headergenerator_bb_impl.cc  sc_fdma_packet_headergenerator_bb_impl.cc~  sc_fdma_packet_headergenerator_bb_impl.h~  sc_fdma_packet_headerparser_b_impl.h~  square_ff_impl.cc~  square_ff_impl.h~  symbol_decision_impl.cc  (+9 more)
gr-howto-12-04-2014/python/: CMakeLists.txt~  qa_square_ff.py~
gr-howto-12-2-2014/: readme.txt
gr-howto-12-2-2014/grc/: CMakeLists.txt  CMakeLists.txt~  howto_base_station_core.xml  howto_base_station_core.xml~  howto_chan_info_parser.xml  howto_chan_info_parser.xml~  howto_header_payload_demux.xml  howto_ofdm_carrier_allocator_cvc.xml~  howto_ofdm_chanest_vcvc.xml~  howto_ofdm_cyclic_prefixer.xml  howto_ofdm_frame_equalizer_vcvc.xml  howto_ofdm_frame_equalizer_vcvc.xml~  howto_ofdm_outer_headerparser_bb.xml  howto_ofdm_sync_sc_cfb.xml~  howto_packet_headerparser_b.xml~  howto_sc_fdma_carrier_allocator_cvc.xml  howto_sc_fdma_deinterleaver.xml  howto_sc_fdma_frame_equalizer_vcvc.xml  howto_sc_fdma_interleaver.xml  howto_sc_fdma_interleaver.xml~  howto_sc_fdma_packet_headergenerator_bb.xml  howto_sc_fdma_packet_headergenerator_bb.xml~  howto_sc_fdma_packet_headerparser_b.xml  howto_symbol_decision.xml  howto_txt_sink.xml  howto_user_device_core.xml~
(+80 files in other folders)
